# Research-agent-for-developers

Advanced-AI-Agent/advanced-agent/: app.py  main.py  pyproject.toml  requirements.txt
Advanced-AI-Agent/advanced-agent/src/: firecrawl.py  workflow.py
Advanced-AI-Agent/simple-agent/: main.py  pyproject.toml
